RESOLVED FIXED168910
[Win] Http preload tests are failing.
https://bugs.webkit.org/show_bug.cgi?id=168910
Summary [Win] Http preload tests are failing.
Per Arne Vollan
Reported 2017-02-27 03:46:16 PST
The feature is not enabled.
Attachments
Patch (1.26 KB, patch)
2017-02-27 03:51 PST, Per Arne Vollan
no flags
Per Arne Vollan
Comment 1 2017-02-27 03:51:17 PST
WebKit Commit Bot
Comment 2 2017-02-27 07:22:46 PST
Comment on attachment 302836 [details] Patch Clearing flags on attachment: 302836 Committed r213063: <http://trac.webkit.org/changeset/213063>
WebKit Commit Bot
Comment 3 2017-02-27 07:22:51 PST
All reviewed patches have been landed. Closing bug.
Per Arne Vollan
Comment 4 2017-02-27 22:40:05 PST
Thanks for reviewing!
Note You need to log in before you can comment on or make changes to this bug.