[Win] Http preload tests are failing. https://bugs.webkit.org/show_bug.cgi?id=168910

Reviewed by Alex Christensen.

The feature is not enabled.

* WebView.cpp:
(WebView::notifyPreferencesChanged):


Canonical link: https://commits.webkit.org/185901@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@213063 268f45cc-cd09-0410-ab3c-d52691b4dbfc